src/tests/routes/trustpub/github_configs/list/snapshots/integration__routes__trustpub__github_configs__list__by_crate__crate_with_no_configs-2.snap
---
source: src/tests/routes/trustpub/github_configs/list/by_crate.rs
expression: response.json()
---
{
  "github_configs": [],
  "meta": {
    "next_page": null,
    "total": 0
  }
}
