src/tests/routes/trustpub/github_configs/list/snapshots/integration__routes__trustpub__github_configs__list__by_crate__happy_path-4.snap
---
source: src/tests/routes/trustpub/github_configs/list/by_crate.rs
expression: response.json()
---
{
  "github_configs": [
    {
      "crate": "bar",
      "created_at": "[datetime]",
      "environment": null,
      "id": 3,
      "repository_name": "BAR",
      "repository_owner": "rust-lang",
      "repository_owner_id": 42,
      "workflow_filename": "publish.yml"
    }
  ],
  "meta": {
    "next_page": null,
    "total": 1
  }
}
