src/tests/routes/trustpub/github_configs/list/snapshots/integration__routes__trustpub__github_configs__list__by_crate__pagination-8.snap
---
source: src/tests/routes/trustpub/github_configs/list/by_crate.rs
expression: json
---
{
  "github_configs": [],
  "meta": {
    "next_page": null,
    "total": 15
  }
}
